--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   firebase_core: ^2.15.1
   cloud_firestore: ^4.9.1
   google_maps_flutter: ^2.5.0
+  location: ^5.0.3
+  provider: ^6.0.5
+  
 
 dev_dependencies:
   flutter_test:
