--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,11 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.1
-  cloud_firestore: ^4.9.1
   google_maps_flutter: ^2.5.0
-  location: ^5.0.3
-  provider: ^6.0.5
   http: ^1.1.0
+  flutter_riverpod: ^2.4.9
+  geolocator: ^10.1.0
+  permission_handler: ^11.1.0
   
 
 dev_dependencies:
